--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@prisma/client": "^3.3.0",
+    "@tailwindcss/forms": "^0.3.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/react": "17.0.32",
     "autoprefixer": "^10.3.7",
+    "babel-plugin-superjson-next": "^0.4.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.11",
@@ -24,5 +27,8 @@
     "prisma": "^3.3.0",
     "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed/todos.ts"
   }
 }
